--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -6,36 +6,6 @@
 </p>
 
 <p>
-  <strong>Machine based:</strong>
-  <%= @activity.machine_based %>
-</p>
-
-<p>
-  <strong>Has weight:</strong>
-  <%= @activity.has_weight %>
-</p>
-
-<p>
-  <strong>Weight:</strong>
-  <%= @activity.weight %>
-</p>
-
-<p>
-  <strong>Rep:</strong>
-  <%= @activity.rep %>
-</p>
-
-<p>
-  <strong>Set:</strong>
-  <%= @activity.set %>
-</p>
-
-<p>
-  <strong>Set type:</strong>
-  <%= @activity.set_type %>
-</p>
-
-<p>
   <strong>Simple desc:</strong>
   <%= @activity.simple_desc %>
 </p>
@@ -53,6 +23,21 @@
 <p>
   <strong>Category:</strong>
   <%= @activity.category %>
+</p>
+
+<p>
+  <strong>Set label:</strong>
+  <%= @activity.set_label %>
+</p>
+
+<p>
+  <strong>Has weight:</strong>
+  <%= @activity.has_weight %>
+</p>
+
+<p>
+  <strong>Machine based:</strong>
+  <%= @activity.machine_based %>
 </p>
 
 <%= link_to 'Edit', edit_activity_path(@activity) %> |
