move activities to admin namespace and add feature specs

--- a/app/views/admin/activities/show.html.erb
+++ b/app/views/admin/activities/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 
-<%= link_to 'Edit', edit_activity_path(@activity) %> |
-<%= link_to 'Back', activities_path %>
+<%= link_to 'Edit', edit_admin_activity_path(@activity) %> |
+<%= link_to 'Back', admin_activities_path %>
 
 <h1>Activity: <%= @activity.name %></h1>
 <section>
