--- a/app/views/admin/activities/index.html.erb
+++ b/app/views/admin/activities/index.html.erb
@@ -28,9 +28,9 @@
         <td><%= activity.set_label %></td>
         <td><%= activity.has_weight %></td>
         <td><%= activity.machine_based %></td>
-        <td><%= link_to 'Show', activity %></td>
-        <td><%= link_to 'Edit', edit_activity_path(activity) %></td>
-        <td><%= link_to 'Destroy', activity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', [:admin, activity] %></td>
+        <td><%= link_to 'Edit', edit_admin_activity_path(activity) %></td>
+        <td><%= link_to 'Destroy', [:admin, activity], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -38,4 +38,4 @@
 
 <br>
 
-<%= link_to 'New Activity', new_activity_path %>
+<%= link_to 'New Activity', new_admin_activity_path %>
