--- a/app/views/admin/plans/_form.html.erb
+++ b/app/views/admin/plans/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @plan] do |f| %>
+<%= form_with(model: [:admin, @plan]) do |f| %>
   <%- if @plan.errors.any? %>
     <%= render partial: 'shared/form_errors', locals: { errors: @plan.errors.full_messages } %>
   <% end %>
