--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <%= render partial: "shared/header", locals: { admin: false } %>
+    <%= render partial: "shared/header", locals: { admin: true } %>
     <div class="container">
       <%= yield %>
     </div>
