--- a/app/views/admin/activities/_form.html.erb
+++ b/app/views/admin/activities/_form.html.erb
@@ -1,57 +1,54 @@
-<%= form_with(model: [:admin, activity]) do |form| %>
-  <% if activity.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(activity.errors.count, "error") %> prohibited this activity from being saved:</h2>
 
-      <ul>
-        <% activity.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+<%= form_with(model: [:admin, activity]) do |f| %>
+  <%- if activity.errors.any? %>
+    <%= render partial: "shared/form_errors", locals: { errors: @activity.errors.full_messages } %>
   <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+  <div class="mb-3">
+    <%= f.label :name, class: "form-label" %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :simple_desc %>
-    <%= form.text_field :simple_desc %>
+  <div class="mb-3">
+    <%= f.label :simple_desc, class: "form-label" %>
+    <%= f.text_area :simple_desc, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :detail_desc %>
-    <%= form.text_field :detail_desc %>
+  <div class="mb-3">
+    <%= f.label :detail_desc, class: "form-label" %>
+    <%= f.text_area :detail_desc, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :location %>
-    <%= form.select(:location, Activity.locations.keys.map { |location| [location.titleize, location]}) %>
+  <div class="mb-3">
+    <%= f.label :location, class: "form-label" %>
+    <%= f.select(:location, Activity.locations.keys.map { |location| [location.titleize, location]}, { }, class: "form-select") %>
   </div>
 
-  <div class="field">
-    <%= form.label :category %>
-    <%= form.select(:category, Activity.categories.keys.map { |category| [category.titleize, category]}) %>
+  <div class="mb-3">
+    <%= f.label :category, class: "form-label" %>
+    <%= f.select(:category, Activity.categories.keys.map { |category| [category.titleize, category]}, { }, class: "form-select") %>
   </div>
 
-  <div class="field">
-    <%= form.label :set_label %>
-    <%= form.select(:set_label, Activity.set_labels.keys.map { |label| [label.titleize, label]}) %>
+  <div class="mb-3">
+    <%= f.label :set_label, class: "form-label" %>
+    <%= f.select(:set_label, Activity.set_labels.keys.map { |label| [label.titleize, label]}, { } , class: "form-select") %>
   </div>
 
-  <div class="field">
-    <%= form.label :has_weight %>
-    <%= form.check_box :has_weight %>
+  <div class="mb-3">
+    <div class="form-check">
+      <%= f.check_box :has_weight, class: "form-check-input" %>
+      <%= f.label :has_weight, class: "form-check-label" %>
+    </div>  
   </div>
 
-  <div class="field">
-    <%= form.label :machine_based %>
-    <%= form.check_box :machine_based %>
-  </div>
-
+  <div class="mb-3">
+    <div class="form-check">
+      <%= f.check_box :machine_based, class: "form-check-input" %>
+      <%= f.label :machine_based, class: "form-check-label" %>
+    </div>  
+  </div>`
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit class: "btn btn-success" %>
+    <%= link_to "Cancel", activity.new_record? ? admin_activities_path : admin_activity_path(activity), class: "btn btn-secondary" %>
   </div>
 <% end %>
+
