--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jessflexapp</title>
+    <title>Admin | Jessflexapp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <%= render partial: "shared/header", locals: { admin: true } %>
-    <div class="container">
-      <%= yield %>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col bg-light text-center border-end" style="background-color: red; min-width: 200px; max-width: 200px; height: 100vh;">
+          <%= render partial: "shared/admin_panel" %>
+        </div>
+        <div class="col">
+          <%= yield %>
+        </div>
+      </div>
     </div>
-    
   </body>
 </html>
