--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-dark bg-dark">
+<header class="navbar fixed-top navbar-dark bg-dark">
   <div class="container-fluid d-flex justify-content-center">
     <%= link_to "JessFlex", admin ? admin_dashboard_path : root_path, class: "navbar-brand" %>
   </div>
