--- a/app/views/admin/activities/_form.html.erb
+++ b/app/views/admin/activities/_form.html.erb
@@ -1,4 +1,3 @@
-
 <%= form_with(model: [:admin, activity]) do |f| %>
   <%- if activity.errors.any? %>
     <%= render partial: "shared/form_errors", locals: { errors: @activity.errors.full_messages } %>
@@ -17,35 +16,34 @@
     <%= f.label :detail_desc, class: "form-label" %>
     <%= f.text_area :detail_desc, class: "form-control" %>
   </div>
-
-  <div class="mb-3">
-    <%= f.label :location, class: "form-label" %>
-    <%= f.select(:location, Activity.locations.keys.map { |location| [location.titleize, location]}, { }, class: "form-select") %>
+  <div class="row mb-3">
+    <div class="col">
+      <%= f.label :location, class: "form-label" %>
+      <%= f.select(:location, Activity.locations.keys.map { |location| [location.titleize, location]}, { }, class: "form-select") %>
+    </div>
+    <div class="col">
+      <%= f.label :category, class: "form-label" %>
+      <%= f.select(:category, Activity.categories.keys.map { |category| [category.titleize, category]}, { }, class: "form-select") %>   
+    </div>
+    <div class="col">
+      <%= f.label :set_label, class: "form-label" %>
+      <%= f.select(:set_label, Activity.set_labels.keys.map { |label| [label.titleize, label]}, { } , class: "form-select") %>
+    </div>
   </div>
-
-  <div class="mb-3">
-    <%= f.label :category, class: "form-label" %>
-    <%= f.select(:category, Activity.categories.keys.map { |category| [category.titleize, category]}, { }, class: "form-select") %>
+  <div class="row mb-3">
+    <div class="col">
+      <div class="form-check">
+        <%= f.check_box :has_weight, class: "form-check-input" %>
+        <%= f.label :has_weight, class: "form-check-label" %>
+      </div>   
+    </div>
+    <div class="col">
+      <div class="form-check">
+        <%= f.check_box :machine_based, class: "form-check-input" %>
+        <%= f.label :machine_based, class: "form-check-label" %>
+      </div>    
+    </div>
   </div>
-
-  <div class="mb-3">
-    <%= f.label :set_label, class: "form-label" %>
-    <%= f.select(:set_label, Activity.set_labels.keys.map { |label| [label.titleize, label]}, { } , class: "form-select") %>
-  </div>
-
-  <div class="mb-3">
-    <div class="form-check">
-      <%= f.check_box :has_weight, class: "form-check-input" %>
-      <%= f.label :has_weight, class: "form-check-label" %>
-    </div>  
-  </div>
-
-  <div class="mb-3">
-    <div class="form-check">
-      <%= f.check_box :machine_based, class: "form-check-input" %>
-      <%= f.label :machine_based, class: "form-check-label" %>
-    </div>  
-  </div>`
   <div class="actions">
     <%= f.submit class: "btn btn-success" %>
     <%= link_to "Cancel", activity.new_record? ? admin_activities_path : admin_activity_path(activity), class: "btn btn-secondary" %>
