--- a/app/views/admin/activities/edit.html.erb
+++ b/app/views/admin/activities/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Activity</h1>
-
-<%= render 'form', activity: @activity %>
-
-<%= link_to 'Show', admin_activity_path(@activity) %> |
-<%= link_to 'Back', admin_activities_path %>
+<div class="container">
+  <div class="row justify-content-center my-5">
+    <div class="col-8">
+      <div class="card shadow-sm" style="border-radius: 1.5rem;">
+      <% # TODO: "move border-radius for card to a class" %>
+        <div class="card-body">
+          <h1 class="mx-3">Edit Activity</h1>
+          <div class="card-text m-4">
+            <%= render 'form', activity: @activity %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
