--- a/app/views/admin/activities/index.html.erb
+++ b/app/views/admin/activities/index.html.erb
@@ -1,41 +1,47 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row justify-content-between align-items-center">
+    <div class="col">
+        <h1>Activities</h1>
+    </div>
+    <div class="col text-end">
+      <%= link_to 'New Activity', new_admin_activity_path, class: "btn btn-success" %>
+    </div>
+  </div>
+  <div class="row">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Simple desc</th>
+          <th>Location</th>
+          <th>Category</th>
+          <th>Set label</th>
+          <th>Has weight</th>
+          <th>Machine based</th>
+          <th>Variations</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @activities.each do |activity| %>
+          <tr>
+            <td><%= activity.name %></td>
+            <td><%= activity.simple_desc %></td>
+            <td><%= activity.location %></td>
+            <td><%= activity.category %></td>
+            <td><%= activity.set_label %></td>
+            <td><%= activity.has_weight %></td>
+            <td><%= activity.machine_based %></td>
+            <td><%= activity.variations.count %></td>
+            <td><%= link_to 'Show', [:admin, activity] %></td>
+            <td><%= link_to 'Edit', edit_admin_activity_path(activity) %></td>
+            <td><%= link_to 'Destroy', [:admin, activity], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-<h1>Activities</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Simple desc</th>
-      <th>Detail desc</th>
-      <th>Location</th>
-      <th>Category</th>
-      <th>Set label</th>
-      <th>Has weight</th>
-      <th>Machine based</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @activities.each do |activity| %>
-      <tr>
-        <td><%= activity.name %></td>
-        <td><%= activity.simple_desc %></td>
-        <td><%= activity.detail_desc %></td>
-        <td><%= activity.location %></td>
-        <td><%= activity.category %></td>
-        <td><%= activity.set_label %></td>
-        <td><%= activity.has_weight %></td>
-        <td><%= activity.machine_based %></td>
-        <td><%= link_to 'Show', [:admin, activity] %></td>
-        <td><%= link_to 'Edit', edit_admin_activity_path(activity) %></td>
-        <td><%= link_to 'Destroy', [:admin, activity], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Activity', new_admin_activity_path %>
