--- a/app/views/admin/activities/new.html.erb
+++ b/app/views/admin/activities/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center my-5">
     <div class="col-8">
-      <div class="card" style="border-radius: 1.5rem;">
+      <div class="card shadow-sm" style="border-radius: 1.5rem;">
       <% # TODO: "move border-radius for card to a class" %>
         <div class="card-body">
           <h1 class="mx-3">New Activity</h1>
