--- a/app/views/admin/variations/new.html.erb
+++ b/app/views/admin/variations/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Create Activity Variation</h1>
-<%= render partial: 'form', locals: { activity: @activity, variation: @variation } %>
+<%= turbo_frame_tag "new_variation", target: "_top" do %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col">
+      <div class="card shadow-sm" style="border-radius: 1.5rem;">
+      <% # TODO: "move border-radius for card to a class" %>
+        <div class="card-body">
+          <h1 class="mx-3">New Activity</h1>
+          <div class="card-text m-4">
+            <%= render partial: 'form', locals: { activity: @activity, variation: @variation } %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<% end %>
