--- a/app/views/admin/variations/new.html.erb
+++ b/app/views/admin/variations/new.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col">
-      <div class="card shadow-sm" style="border-radius: 1.5rem;">
+      <div class="card shadow-sm form-border">
       <% # TODO: "move border-radius for card to a class" %>
         <div class="card-body">
           <h1 class="mx-3">New Activity</h1>
