--- a/app/views/admin/variations/_form.html.erb
+++ b/app/views/admin/variations/_form.html.erb
@@ -6,29 +6,29 @@
 <div class="row mb-2" data-controller="slider">
   <%= f.label :set, class: "form-label" %>
   <div class="col">
-    <input type="range" class="form-range" min="1" max="10" value="1" id="customRange2" data-slider-target="number" data-action="change->slider#label">
+    <input type="range" class="form-range" min="1" max="10" value="1" id="customRange2" data-slider-target="range" data-action="change->slider#label">
   </div>
-  <div class="col-2">
-    <%= f.number_field :set, class: 'form-control', value: 1, "data-slider-target": "label" %>
+  <div class="col-3">
+    <%= f.number_field :set, class: 'form-control', value: 1, "data-slider-target": "field", "data-action": "change->slider#slider"%>
   </div>
 </div>
 <div class="row mb-2" data-controller="slider">
   <%= f.label :rep, class: "form-label" %>
   <div class="col">
-    <input type="range" class="form-range" min="5" max="50" step="5" value="5" id="repRange" data-slider-target="number" data-action="change->slider#label">
+    <input type="range" class="form-range" min="5" max="50" step="5" value="5" id="repRange" data-slider-target="range" data-action="change->slider#label">
   </div>
-  <div class="col-2">
-    <%= f.number_field :rep, class: "form-control", value: 5, "data-slider-target": "label" %>
+  <div class="col-3">
+    <%= f.number_field :rep, class: "form-control", value: 5, step: 5, "data-slider-target": "field", "data-action": "change->slider#slider" %>
   </div>
 </div>
 <%- if activity.has_weight %>
   <div class="row mb-2" data-controller="slider">
     <%= f.label :weight, class: "form-label" %>
     <div class="col">
-      <input type="range" class="form-range" min="5" max="250" step="5" value="5" id="repRange" data-slider-target="number" data-action="change->slider#label">
+      <input type="range" class="form-range" min="5" max="250" step="5" value="5" id="repRange" data-slider-target="range" data-action="change->slider#label">
     </div>
-    <div class="col-2">
-      <%= f.number_field :weight, class: "form-control", value: 5,"data-slider-target": "label" %>
+    <div class="col-3">
+      <%= f.number_field :weight, class: "form-control", value: 5, step: 5,"data-slider-target": "field", "data-action": "change->slider#slider" %>
     </div>
   </div>
 <% end %>
