--- a/app/views/admin/workouts/_form.html.erb
+++ b/app/views/admin/workouts/_form.html.erb
@@ -9,7 +9,7 @@
 
   <div class="mb-3">
     <%= f.label :description, class: 'form-label' %>
-    <%= f.text_area :description, class: 'form-control', rows: 3 %>
+    <%= f.rich_text_area :description %>
   </div>
   <div class="mb-3">
     <div class="form-check">
