--- a/app/views/admin/workouts/new.html.erb
+++ b/app/views/admin/workouts/new.html.erb
@@ -1,2 +1,18 @@
 <h1>Create Workouts</h1>
-<%= render partial: "form", locals: { workout: @workout} %>
+
+
+<div class="container">
+  <div class="row justify-content-center my-5">
+    <div class="col-8">
+      <div class="card shadow-sm" style="border-radius: 1.5rem;">
+      <% # TODO: "move border-radius for card to a class" %>
+        <div class="card-body">
+          <h1 class="mx-3">Create Workout</h1>
+          <div class="card-text m-4">
+            <%= render partial: "form", locals: { workout: @workout} %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
