labeling for no variations

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,6 +1,11 @@
 @import "bootstrap";
 @import "./actiontext.scss";
 
+body {
+  margin-top: 56px; 
+  min-height: 100vh;
+}
+
 .form-border {
   border-radius: 1.5rem;
 }
