--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body style="margin-top: 56px; min-height: 100vh;">
+  <body>
     <%= render partial: "shared/header", locals: { admin: true } %>
     <div class="container-fluid" style="min-height: 100vh">
       <div class="row" style="min-height: 100vh;">
