--- a/app/views/shared/_admin_panel.html.erb
+++ b/app/views/shared/_admin_panel.html.erb
@@ -2,16 +2,23 @@
   <h2>Admin</h2>
   <ul class="nav flex-column">
     <li class="nav-item">
-      <%= link_to "Activities", admin_activities_path, class: "nav-link" %>
+      <%= link_to(admin_activities_path, class: "nav-link") do %>
+        <i class="fad fa-running"></i> Activities
+      <% end %>
     </li>
     <li class="nav-item">
       <%= link_to "Machines", admin_machines_path, class: "nav-link" %>
     </li>
         <li class="nav-item">
-      <%= link_to "Plans", admin_plans_path, class: "nav-link" %>
+          <%= link_to(admin_plans_path, class: "nav-link") do %>
+            <i class="fad fa-clipboard-list"></i> Plans
+          <% end %>
+     
     </li>
     <li class="nav-item">
-      <%= link_to "Workouts", admin_workouts_path, class: "nav-link" %>
+      <%= link_to(admin_workouts_path, class: "nav-link") do %>
+        <i class="fad fa-dumbbell"></i> Workouts
+      <% end %>
     </li>
   </ul>
 </div>
