--- a/app/views/admin/workouts/show.html.erb
+++ b/app/views/admin/workouts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" data-controller="loader" data-loader-show-value="/admin/workouts/<%= @workout.id %>/workout_activities/" data-loader-form-value="/admin/workouts/<%= @workout.id %>/workout_activities/new">
   <div class="row">
     <div class="col">
       <h1><%= @workout.title %></h1>
@@ -10,8 +10,6 @@
       <i class="fal fa-stopwatch mx-1"></i><span class="ps-1 pe-2"><%= @workout.time_clean %></span>
       |
       <i class="fal fa-mountain mx-1"></i><span class="ps-1 pe-2"><%= @workout.difficulty.titleize %></span>
-      |
-      <i class="fal fa-usd-circle mx-1"></i><span class="ps-1 pe-2"><%= @workout.price_clean %></span>
     </div>
   </div>
   <div class="row">
@@ -22,34 +20,26 @@
   </div>
   <div class="row my-2">
     <div class="col-6">
-      <h4>Activites</h4>
-      <hr>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Sets</th>
-            <th>Reps</th>
-            <th>Weight</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="workout-activities">
-          <%
-=begin%>
- <% @workout.variations.each do |variation| %>
-          <tr>
-            <td><%= variation.activity.name %></td>
-            <td><%= variation.set %></td>
-            <td><%= variation.rep %></td>
-            <td><%= variation.weight %></td>
-            <td></td>
-          </tr>
-          <% end %> 
-<%
-=end%>
-        </tbody>
-      </table>
+      <div class="card" style="width: 18rem;">
+        <div class="card-header d-flex justify-content-between align-content-center">
+          <div class='pt-1'>Activities</div>
+          <%= link_to("#", class: "btn btn-sm", data: { action: "loader#fetch", "loader-target": "selection", record: 0 }) do %>
+            <i class="fal fa-plus"></i>
+          <% end %>
+        </div>
+        <ul class="list-group list-group-flush" data-controller="list-active-item" data-list-active-item-active-class="active">
+          <% @workout.workout_activities.each do |workout_activity| %>
+            <a href="#" class="list-group-item" data-action="list-active-item#activate loader#fetch" data-list-active-item-target="link" data-loader-target="selection" data-record="<%= workout_activity.id %>"><%= workout_activity.activity.name %></a>
+            <tr>
+              <td></td>
+              </tr>
+          <% end %>
+        </ul>
+      </div>
+
+    </div>
+    <div class="col-6">
+      <div id="activity-container" data-loader-target="container">Test</div>
     </div>
   </div>
 </div>
