--- a/app/views/admin/workout_activities/new.html.erb
+++ b/app/views/admin/workout_activities/new.html.erb
@@ -1,32 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Add Activity to Workout</h1>
+      <h1>Add activity to workout</h1>
     </div>
   </div>
-  <div class="row" data-controller="activity-select">
-    <div class="col">
-      <%- if @workout_activity.errors.any? %>
-        <%= render partial: "shared/form_errors", locals: { errors: @workout_activity.errors.full_messages } %>
-      <% end %>
-      <%= form_with(model: [:admin, @workout, @workout_activity]) do |f| %>
-        <%= f.label :activity_id, "Activity" %>
-        <%= f.select(:activity_id, options_for_select(Activity.all.map { |a| [a.name, a.id] }), { prompt: "Select an Activity" } , { class: "form-select", data: { "activity-select-target": "activity", action: "change->activity-select#getSeries activity-select#getVariations activity-select#clearDropdowns"}}) %>
-        <%= f.label :series_id %>
-        <%= f.select(:series_id, "", { prompt: "You must select an Activity..." }, { class: "form-select", data: { "activity-select-target": "series" } }) %>
-        <%= f.label :variation_id, "Activity Variation" %>
-        <%= f.select(:variation_id, "", { prompt: "You must select an Activity..." }, { class: "form-select", data: { "activity-select-target": "variations" } }) %>
-        <%= f.label :difficulty, class: "form-label" %>
-        <% WorkoutActivity.difficulties.keys.each do |key| %>
-          <div class="form-check form-check-inline">
-            <%= f.radio_button :difficulty, key, class: "form-check-input" %>
-            <%= f.label "difficulty_" + key, key.titleize, class: "form-check-label" %>
-          </div>
-        <% end %>
-
-        <%= f.submit class: "btn btn-success" %>
-      <% end %>
-    </div>
+  <div class="col">
+    <%= render partial: 'form', locals: { workout: @workout, workout_activity: @workout_activity } %>
   </div>
 </div>
-
