--- a/app/views/admin/workouts/_workout.html.erb
+++ b/app/views/admin/workouts/_workout.html.erb
@@ -9,7 +9,7 @@
       <div class="card-text">
         <div class="row mb-3">
           <div class="col">
-            <i class="fal fa-stopwatch mx-1"></i><span class="ps-1 pe-2"><%= workout.time_clean %></span>
+            <i class="fal fa-stopwatch mx-1"></i><span class="ps-1 pe-2"><%= workout.duration_label %></span>
             |
             <i class="fal fa-mountain mx-1"></i><span class="ps-1 pe-2"><%= workout.difficulty.titleize %></span>
           </div>
