--- a/app/views/admin/workouts/show.html.erb
+++ b/app/views/admin/workouts/show.html.erb
@@ -7,7 +7,7 @@
   <div class="row">
 
     <div class="col">
-      <i class="fal fa-stopwatch mx-1"></i><span class="ps-1 pe-2"><%= @workout.time_clean %></span>
+      <i class="fal fa-stopwatch mx-1"></i><span class="ps-1 pe-2"><%= @workout.duration_label %></span>
       |
       <i class="fal fa-mountain mx-1"></i><span class="ps-1 pe-2"><%= @workout.difficulty.titleize %></span>
     </div>
