--- a/app/views/admin/workouts/new.html.erb
+++ b/app/views/admin/workouts/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="container">
   <div class="row justify-content-center my-5">
-    <div class="col-8">
+    <div class="col">
       <div class="card shadow-sm" style="border-radius: 1.5rem;">
       <% # TODO: "move border-radius for card to a class" %>
         <div class="card-body">
