--- a/app/views/shared/_admin_panel.html.erb
+++ b/app/views/shared/_admin_panel.html.erb
@@ -1,6 +1,6 @@
 <div class='container mt-3 position-sticky' style="top: 74px;">
   <h2>Admin</h2>
-  <ul class="nav flex-column">
+  <ul class="nav flex-column text-sm-start">
     <li class="nav-item">
       <%= link_to(admin_activities_path, class: "nav-link") do %>
         <i class="fad fa-running"></i> Activities
