--- a/app/views/admin/plans/_form.html.erb
+++ b/app/views/admin/plans/_form.html.erb
@@ -2,22 +2,37 @@
   <%- if @plan.errors.any? %>
     <%= render partial: 'shared/form_errors', locals: { errors: @plan.errors.full_messages } %>
   <% end %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  </br>
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-  </br>
-  <%= f.label :price %>
-  <%= f.number_field :price %>
-  </br>
-  <%= f.label :difficulty %>
-  <%= f.select :difficulty, Plan.difficulties.keys.map { |key| [key.humanize, key] } %>
-  </br>
+  <div class="mb-3">
+    <%= f.label :title, class: "form-label" %>
+    <%= f.text_field :title, class: "form-control" %>
+  </div>
+  <div class="mb-3">
+    <%= f.label :description, class: "form-label" %>
+    <%= f.text_area :description, class: "form-control" %>
+  </div>  
+  <div>
+    <%= f.label :price, class: "form-label" %>
+  </div>
+  <div class="input-group mb-3">
+    <span class="input-group-text">
+      <i class="fas fa-dollar-sign"></i>
+    </span>
+    <%= f.text_field :price, class: "form-control" %>  
+  </div>  
+  <div class="mb-3">
+    <%= f.label :difficulty, class: "form-label" %>
+    <%= f.select :difficulty, Plan.difficulties.keys.map { |key| [key.humanize, key] }, { }, class: "form-select" %>
+  </div>
   <% unless @plan.new_record? %>
-  <%= f.label :status %>
-  <%= f.select :status, Plan.statuses.keys.map { |key| [key.humanize, key]} %>
+    <div class="mb-3">
+      <%= f.label :status, class: "form-label" %>
+      <%= f.select :status, Plan.statuses.keys.map { |key| [key.humanize, key]}, { }, class: "form-select" %>
+    </div>
   <% end %>
-  </br>
-  <%= f.submit %>
+
+  <div class="mb-3">
+    <%= f.submit class: "btn btn-success" %>
+    <%= link_to "Cancel", plan.new_record? ? admin_plans_path : admin_plan_path(plan), class: "btn btn-outline-danger" %>
+  </div>
+  
 <% end %>
