--- a/app/views/admin/plans/edit.html.erb
+++ b/app/views/admin/plans/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Edit Plan</h1>
-<%= render partial: 'form' %>
+<div class="container">
+  <div class="row justify-content-center my-5">
+    <div class="col-md-8">
+      <div class="card shadow-sm form-border" >
+        <div class="card-body">
+          <h1 class="mx-3">Edit Plan</h1>
+          <hr />
+          <div class="card-text m-4">
+            <%= render partial: "form", locals: { plan: @plan } %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
