--- a/app/views/admin/machines/_form.html.erb
+++ b/app/views/admin/machines/_form.html.erb
@@ -11,5 +11,5 @@
     <%= f.text_area :notes, class: "form-control", rows: 3 %>
   </div>
   <%= f.submit class: "btn btn-success" %>
-  <%= link_to "Cancel", machine.new_record? ? admin_machines_path : admin_machine_path(machine), class: "btn btn-secondary" %>
+  <%= link_to "Cancel", machine.new_record? ? admin_machines_path : admin_machine_path(machine), class: "btn btn-outline-danger" %>
 <% end %>
