--- a/app/views/admin/machines/index.html.erb
+++ b/app/views/admin/machines/index.html.erb
@@ -1,21 +1,19 @@
-<h1>All Machines</h1>
-<%= link_to "Create Machine", new_admin_machine_path %>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <%- @machines.each do |machine| %>
-      <tr>
-        <td><%= machine.name %></td>
-        <td>
-          <%= link_to "Edit", edit_admin_machine_path(machine) %>
-          <%= link_to "Delete", admin_machine_path(machine), method: :delete, data: { confirm: "Are you sure?" } %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h1>Machines</h1>
+      <hr>
+    </div>
+  </div>
+  <div class="row mb-3">
+    <div class="col-12">
+      <%= link_to "Create Machine", new_admin_machine_path, class: "btn btn-success" %>
+    </div>
+  </div>
+  <div class="row" id="machines">
+    <%= render @machines %>
+  </div>
+</div>
+
+
+
