--- a/app/views/admin/activities/index.html.erb
+++ b/app/views/admin/activities/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 <div class="container">
   <div class="row justify-content-between align-items-center">
     <div class="col">
@@ -39,6 +38,8 @@
         <% end %>
       </tbody>
     </table>
+
+      <%== pagy_bootstrap_nav(@pagy) %>
   </div>
 </div>
 
