--- a/app/views/admin/activities/edit.html.erb
+++ b/app/views/admin/activities/edit.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "shared/breadcrumbs" %>
 <div class="container">
   <div class="row justify-content-center my-5">
     <div class="col-8">
