--- a/app/views/admin/activities/index.html.erb
+++ b/app/views/admin/activities/index.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "shared/breadcrumbs" %>
 <div class="container">
   <div class="row justify-content-between align-items-center">
     <div class="col">
@@ -30,7 +31,7 @@
             <td><%= activity.set_label %></td>
             <td><%= activity.has_weight %></td>
             <td><%= activity.machine_based %></td>
-            <td><%= activity.variations.count %></td>
+            <td><%= activity.variations.size %></td>
             <td><%= link_to 'Show', [:admin, activity] %></td>
             <td><%= link_to 'Edit', edit_admin_activity_path(activity) %></td>
             <td><%= link_to 'Destroy', [:admin, activity], method: :delete, data: { confirm: 'Are you sure?' } %></td>
