--- a/app/views/admin/activities/show.html.erb
+++ b/app/views/admin/activities/show.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "shared/breadcrumbs" %>
 <div class="container">
   <div class="row">
     <ul class="list-group list-group-horizontal my-3">
